# Audio-Asset-Studio

./: CLAUDE.md  MEMORY.md  audio_studio.py  pyproject.toml  requirements.txt  studio.capabilities.json
dashboard/: app.py  components.py
dashboard/pages/: 1_🎛️_Studio.py  2_🪄_New_Project.py  3_📚_Prompt_Library.py  4_⚙️_Settings.py  5_🧮_Bulk_Authoring.py  6_🧪_Review_Cockpit.py  7_🧵_Queue_Manager.py
phases/: engine_exporters.py  phase6_engine_import.py
scripts/: queue_worker.py
shared/: asset_sheet.py  job_queue.py  prompt_library.py  reviews.py
tests/: test_asset_sheet.py  test_job_queue.py  test_prompt_library.py  test_reviews.py
