[project]
name = "audio-asset-studio"
version = "0.2.0"
description = "프롬프트 기반 게임 오디오 에셋 자동 생성 파이프라인"
requires-python = ">=3.9,<3.12"
license = { text = "MIT" }

# 기본 설치: 파이프라인 로직 + 후처리. 로컬 추론/태깅/대시보드는 extras로.
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "numpy>=1.24",
    "requests>=2.28",
    "soundfile>=0.12",
    "pyloudnorm>=0.1.1",
]

[project.optional-dependencies]
# 로컬 추론 (M-series MPS / CUDA)
ml = [
    "torch>=2.3",
    "torchaudio>=2.3",
    "audiocraft>=1.3.0",
]
# CLAP 태깅 / 스코어링 / 프롬프트 라이브러리
tagging = [
    "laion-clap>=1.1.6",
    "chromadb>=0.4.22",
]
# stems 분리
stems = [
    "demucs>=4.0.0",
]
# 웜풀 데몬
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
# Streamlit UI
dashboard = [
    "streamlit>=1.34",
    "matplotlib>=3.8",
    "openpyxl>=3.1",
]
# 테스트
dev = [
    "pytest>=8.0",
    "scipy>=1.11",
]
# 전부
all = [
    "audio-asset-studio[ml,tagging,stems,server,dashboard,dev]",
]

[project.scripts]
audio-studio = "audio_studio:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "phases*", "post_process*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
